name: damien
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: funcprog
description: Program written by Damien PUIG for the functionnal programming part of "Paradigms of Programming"
data-dir: ""

executable damien
    build-depends: QuickCheck -any, base -any, parsec, containers
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
